--- a/config/zones/US-NE-ISNE.yaml
+++ b/config/zones/US-NE-ISNE.yaml
@@ -5,6 +5,72 @@ bounding_box:
     - 47.9598300000001
 capacity:
   battery storage:
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 128.6
+    - datetime: '2021-03-01'
+      source: EIA.gov
+      value: 140.6
+    - datetime: '2021-04-01'
+      source: EIA.gov
+      value: 151.6
+    - datetime: '2021-05-01'
+      source: EIA.gov
+      value: 155.3
+    - datetime: '2021-06-01'
+      source: EIA.gov
+      value: 183.3
+    - datetime: '2021-07-01'
+      source: EIA.gov
+      value: 189.8
+    - datetime: '2021-08-01'
+      source: EIA.gov
+      value: 194.8
+    - datetime: '2021-09-01'
+      source: EIA.gov
+      value: 203.5
+    - datetime: '2021-10-01'
+      source: EIA.gov
+      value: 208.5
+    - datetime: '2021-11-01'
+      source: EIA.gov
+      value: 225.2
+    - datetime: '2021-12-01'
+      source: EIA.gov
+      value: 243.5
+    - datetime: '2022-01-01'
+      source: EIA.gov
+      value: 238.5
+    - datetime: '2022-02-01'
+      source: EIA.gov
+      value: 244.5
+    - datetime: '2022-03-01'
+      source: EIA.gov
+      value: 246.5
+    - datetime: '2022-04-01'
+      source: EIA.gov
+      value: 247.5
+    - datetime: '2022-05-01'
+      source: EIA.gov
+      value: 251.3
+    - datetime: '2022-06-01'
+      source: EIA.gov
+      value: 255.3
+    - datetime: '2022-07-01'
+      source: EIA.gov
+      value: 259.3
+    - datetime: '2022-08-01'
+      source: EIA.gov
+      value: 264.8
+    - datetime: '2022-09-01'
+      source: EIA.gov
+      value: 270.4
+    - datetime: '2022-11-01'
+      source: EIA.gov
+      value: 275.4
+    - datetime: '2022-12-01'
+      source: EIA.gov
+      value: 305.4
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 314.9
@@ -42,6 +108,21 @@ capacity:
       source: EIA.gov
       value: 393.4
   biomass:
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 1386.8
+    - datetime: '2021-07-01'
+      source: EIA.gov
+      value: 1370.8
+    - datetime: '2022-01-01'
+      source: EIA.gov
+      value: 1380.7
+    - datetime: '2022-04-01'
+      source: EIA.gov
+      value: 1371.3
+    - datetime: '2022-07-01'
+      source: EIA.gov
+      value: 1281.3
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 1247.5
@@ -49,10 +130,46 @@ capacity:
       source: EIA.gov
       value: 1245.9
   coal:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 859.2
+    - datetime: '2021-06-01'
       source: EIA.gov
       value: 459.2
   gas:
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 20033.5
+    - datetime: '2021-03-01'
+      source: EIA.gov
+      value: 19894.2
+    - datetime: '2021-04-01'
+      source: EIA.gov
+      value: 19916.4
+    - datetime: '2021-06-01'
+      source: EIA.gov
+      value: 19915.9
+    - datetime: '2021-07-01'
+      source: EIA.gov
+      value: 19802.3
+    - datetime: '2021-09-01'
+      source: EIA.gov
+      value: 19804.2
+    - datetime: '2022-01-01'
+      source: EIA.gov
+      value: 18942.5
+    - datetime: '2022-06-01'
+      source: EIA.gov
+      value: 18822.5
+    - datetime: '2022-09-01'
+      source: EIA.gov
+      value: 18824.3
+    - datetime: '2022-11-01'
+      source: EIA.gov
+      value: 18828.9
+    - datetime: '2022-12-01'
+      source: EIA.gov
+      value: 18843.7
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 18100.4
@@ -72,10 +189,16 @@ capacity:
       source: EIA.gov
       value: 16370.4
   geothermal:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   hydro:
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 1894.0
+    - datetime: '2022-01-01'
+      source: EIA.gov
+      value: 1901.3
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 1896.3
@@ -86,14 +209,41 @@ capacity:
       source: EIA.gov
       value: 1895.7
   hydro storage:
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 1799.0
+    - datetime: '2022-01-01'
+      source: EIA.gov
+      value: 1499.0
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 1532.0
   nuclear:
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 3404.9
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 3501.9
   oil:
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 5724.6
+    - datetime: '2021-06-01'
+      source: EIA.gov
+      value: 5093.4
+    - datetime: '2021-09-01'
+      source: EIA.gov
+      value: 5089.4
+    - datetime: '2021-10-01'
+      source: EIA.gov
+      value: 5070.8
+    - datetime: '2022-01-01'
+      source: EIA.gov
+      value: 5944.8
+    - datetime: '2022-06-01'
+      source: EIA.gov
+      value: 5886.3
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 6141.9
@@ -104,6 +254,75 @@ capacity:
       source: EIA.gov
       value: 6121.6
   solar:
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 1608.7
+    - datetime: '2021-03-01'
+      source: EIA.gov
+      value: 1634.5
+    - datetime: '2021-04-01'
+      source: EIA.gov
+      value: 1652.0
+    - datetime: '2021-05-01'
+      source: EIA.gov
+      value: 1662.4
+    - datetime: '2021-06-01'
+      source: EIA.gov
+      value: 1730.0
+    - datetime: '2021-07-01'
+      source: EIA.gov
+      value: 1743.6
+    - datetime: '2021-08-01'
+      source: EIA.gov
+      value: 1753.8
+    - datetime: '2021-09-01'
+      source: EIA.gov
+      value: 1797.9
+    - datetime: '2021-10-01'
+      source: EIA.gov
+      value: 1881.7
+    - datetime: '2021-11-01'
+      source: EIA.gov
+      value: 1910.7
+    - datetime: '2021-12-01'
+      source: EIA.gov
+      value: 2073.5
+    - datetime: '2022-01-01'
+      source: EIA.gov
+      value: 2119.9
+    - datetime: '2022-02-01'
+      source: EIA.gov
+      value: 2146.9
+    - datetime: '2022-03-01'
+      source: EIA.gov
+      value: 2169.0
+    - datetime: '2022-04-01'
+      source: EIA.gov
+      value: 2183.7
+    - datetime: '2022-05-01'
+      source: EIA.gov
+      value: 2194.0
+    - datetime: '2022-06-01'
+      source: EIA.gov
+      value: 2214.8
+    - datetime: '2022-07-01'
+      source: EIA.gov
+      value: 2232.0
+    - datetime: '2022-08-01'
+      source: EIA.gov
+      value: 2249.4
+    - datetime: '2022-09-01'
+      source: EIA.gov
+      value: 2264.2
+    - datetime: '2022-10-01'
+      source: EIA.gov
+      value: 2289.2
+    - datetime: '2022-11-01'
+      source: EIA.gov
+      value: 2313.8
+    - datetime: '2022-12-01'
+      source: EIA.gov
+      value: 2341.5
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 2480.6
@@ -174,11 +393,20 @@ capacity:
       source: EIA.gov
       value: 3170.7
   unknown:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   wind:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 1498.4
+    - datetime: '2021-11-01'
+      source: EIA.gov
+      value: 1513.7
+    - datetime: '2021-12-01'
+      source: EIA.gov
+      value: 1518.2
+    - datetime: '2022-10-01'
       source: EIA.gov
       value: 1538.2
 comment: Iso New England Inc.
