--- a/config/zones/US-NW-NEVP.yaml
+++ b/config/zones/US-NW-NEVP.yaml
@@ -5,7 +5,16 @@ bounding_box:
     - 42.5017700000001
 capacity:
   battery storage:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 0.0
+    - datetime: '2021-06-01'
+      source: EIA.gov
+      value: 25.0
+    - datetime: '2021-07-01'
+      source: EIA.gov
+      value: 35.0
+    - datetime: '2022-03-01'
       source: EIA.gov
       value: 110.0
     - datetime: '2023-07-01'
@@ -21,21 +30,33 @@ capacity:
       source: EIA.gov
       value: 1035.0
   biomass:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 15.2
   coal:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 809.0
   gas:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 7606.2
     - datetime: '2024-07-01'
       source: EIA.gov
       value: 8061.8
   geothermal:
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 750.5
+    - datetime: '2021-04-01'
+      source: EIA.gov
+      value: 775.3
+    - datetime: '2022-04-01'
+      source: EIA.gov
+      value: 800.8
+    - datetime: '2022-08-01'
+      source: EIA.gov
+      value: 822.7
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 819.7
@@ -55,22 +76,49 @@ capacity:
       source: EIA.gov
       value: 918.5
   hydro:
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 12.8
+    - datetime: '2022-01-01'
+      source: EIA.gov
+      value: 16.4
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 16.9
   hydro storage:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   nuclear:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   oil:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 15.0
   solar:
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 1592.5
+    - datetime: '2021-03-01'
+      source: EIA.gov
+      value: 1844.5
+    - datetime: '2021-05-01'
+      source: EIA.gov
+      value: 2045.5
+    - datetime: '2021-11-01'
+      source: EIA.gov
+      value: 2046.4
+    - datetime: '2022-03-01'
+      source: EIA.gov
+      value: 2347.5
+    - datetime: '2022-04-01'
+      source: EIA.gov
+      value: 2349.3
+    - datetime: '2022-07-01'
+      source: EIA.gov
+      value: 2356.3
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 2355.8
@@ -102,11 +150,11 @@ capacity:
       source: EIA.gov
       value: 4180.9
   unknown:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 7.5
   wind:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 150.0
 comment: Nevada Power Company
