--- a/config/zones/US-CAL-LDWP.yaml
+++ b/config/zones/US-CAL-LDWP.yaml
@@ -5,21 +5,30 @@ bounding_box:
     - 37.963081
 capacity:
   battery storage:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 23.5
     - datetime: '2024-11-01'
       source: EIA.gov
       value: 173.5
   biomass:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 33.0
+    - datetime: '2022-07-01'
       source: EIA.gov
       value: 34.1
   coal:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 1640.0
   gas:
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 4854.6
+    - datetime: '2022-01-01'
+      source: EIA.gov
+      value: 4832.5
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 4814.5
@@ -33,27 +42,51 @@ capacity:
       source: EIA.gov
       value: 4591.6
   geothermal:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   hydro:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 296.0
+    - datetime: '2022-01-01'
       source: EIA.gov
       value: 270.0
   hydro storage:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 1626.0
+    - datetime: '2022-01-01'
       source: EIA.gov
       value: 1084.0
   nuclear:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   oil:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   solar:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 987.0
+    - datetime: '2021-04-01'
+      source: EIA.gov
+      value: 988.8
+    - datetime: '2021-12-01'
+      source: EIA.gov
+      value: 991.4
+    - datetime: '2022-01-01'
+      source: EIA.gov
+      value: 989.3
+    - datetime: '2022-02-01'
+      source: EIA.gov
+      value: 991.7
+    - datetime: '2022-04-01'
+      source: EIA.gov
+      value: 992.5
+    - datetime: '2022-07-01'
       source: EIA.gov
       value: 994.0
     - datetime: '2023-02-01'
@@ -72,11 +105,11 @@ capacity:
       source: EIA.gov
       value: 1204.4
   unknown:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 31.9
   wind:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 440.5
 comment: Los Angeles Department Of Water And Power
