--- a/config/zones/US-FLA-FPL.yaml
+++ b/config/zones/US-FLA-FPL.yaml
@@ -5,11 +5,20 @@ bounding_box:
     - 31.33017
 capacity:
   battery storage:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 24.0
+    - datetime: '2021-11-01'
+      source: EIA.gov
+      value: 433.0
+    - datetime: '2021-12-01'
       source: EIA.gov
       value: 493.0
   biomass:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 620.8
+    - datetime: '2022-01-01'
       source: EIA.gov
       value: 617.6
     - datetime: '2023-02-01'
@@ -19,40 +28,64 @@ capacity:
       source: EIA.gov
       value: 543.8
   coal:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   gas:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 23743.6
+    - datetime: '2022-01-01'
+      source: EIA.gov
+      value: 24018.1
+    - datetime: '2022-05-01'
       source: EIA.gov
       value: 25465.8
     - datetime: '2024-01-01'
       source: EIA.gov
       value: 28207.1
   geothermal:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   hydro:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 43.5
   hydro storage:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   nuclear:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 3797.2
   oil:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 274.5
     - datetime: '2024-01-01'
       source: EIA.gov
       value: 316.3
   solar:
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 2275.3
+    - datetime: '2021-03-01'
+      source: EIA.gov
+      value: 2573.3
+    - datetime: '2021-04-01'
+      source: EIA.gov
+      value: 2647.8
+    - datetime: '2021-05-01'
+      source: EIA.gov
+      value: 2871.3
+    - datetime: '2021-06-01'
+      source: EIA.gov
+      value: 2945.8
+    - datetime: '2022-01-01'
+      source: EIA.gov
+      value: 3392.8
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 4137.4
@@ -75,11 +108,11 @@ capacity:
       source: EIA.gov
       value: 7192.3
   unknown:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   wind:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
 comment: Florida Power & Light Company
