--- a/config/zones/US-FLA-TEC.yaml
+++ b/config/zones/US-FLA-TEC.yaml
@@ -5,18 +5,36 @@ bounding_box:
     - 28.9295718550001
 capacity:
   battery storage:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 0.0
+    - datetime: '2022-01-01'
       source: EIA.gov
       value: 12.6
   biomass:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 69.1
   coal:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 1124.4
+    - datetime: '2021-12-01'
+      source: EIA.gov
+      value: 678.9
+    - datetime: '2022-01-01'
       source: EIA.gov
       value: 486.0
   gas:
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 5535.7
+    - datetime: '2021-12-01'
+      source: EIA.gov
+      value: 6331.3
+    - datetime: '2022-01-01'
+      source: EIA.gov
+      value: 6665.5
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 6770.4
@@ -24,27 +42,48 @@ capacity:
       source: EIA.gov
       value: 6324.9
   geothermal:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   hydro:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   hydro storage:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   nuclear:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   oil:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 133.4
+    - datetime: '2022-01-01'
       source: EIA.gov
       value: 0.0
   solar:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 661.6
+    - datetime: '2021-12-01'
+      source: EIA.gov
+      value: 736.1
+    - datetime: '2022-01-01'
+      source: EIA.gov
+      value: 781.9
+    - datetime: '2022-03-01'
+      source: EIA.gov
+      value: 782.9
+    - datetime: '2022-04-01'
+      source: EIA.gov
+      value: 912.0
+    - datetime: '2022-06-01'
+      source: EIA.gov
+      value: 913.0
+    - datetime: '2022-12-01'
       source: EIA.gov
       value: 1029.4
     - datetime: '2023-12-01'
@@ -54,11 +93,11 @@ capacity:
       source: EIA.gov
       value: 1356.4
   unknown:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 325.3
   wind:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
 comment: Tampa Electric Company
