--- a/config/zones/US-SW-AZPS.yaml
+++ b/config/zones/US-SW-AZPS.yaml
@@ -5,7 +5,7 @@ bounding_box:
     - 36.784585904
 capacity:
   battery storage:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 2.0
     - datetime: '2023-02-01'
@@ -27,38 +27,50 @@ capacity:
       source: EIA.gov
       value: 617.0
   biomass:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 30.4
   coal:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 2062.1
   gas:
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 2714.6
+    - datetime: '2022-01-01'
+      source: EIA.gov
+      value: 2605.1
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 2416.5
   geothermal:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   hydro:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   hydro storage:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   nuclear:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   oil:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 123.8
   solar:
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 772.0
+    - datetime: '2022-01-01'
+      source: EIA.gov
+      value: 771.7
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 766.9
@@ -72,11 +84,11 @@ capacity:
       source: EIA.gov
       value: 1193.3
   unknown:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   wind:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 174.3
     - datetime: '2023-05-01'
