--- a/config/zones/US-SW-PNM.yaml
+++ b/config/zones/US-SW-PNM.yaml
@@ -5,6 +5,12 @@ bounding_box:
     - 38.30081076184365
 capacity:
   battery storage:
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 1.8
+    - datetime: '2022-11-01'
+      source: EIA.gov
+      value: 13.8
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 14.3
@@ -18,38 +24,77 @@ capacity:
       source: EIA.gov
       value: 338.0
   biomass:
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 14.6
+    - datetime: '2022-01-01'
+      source: EIA.gov
+      value: 16.8
+    - datetime: '2022-11-01'
+      source: EIA.gov
+      value: 4.4
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 3.3
   coal:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 924.0
+    - datetime: '2022-06-01'
+      source: EIA.gov
+      value: 555.0
+    - datetime: '2022-09-01'
       source: EIA.gov
       value: 0.0
   gas:
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 1584.9
+    - datetime: '2022-01-01'
+      source: EIA.gov
+      value: 1732.7
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 1733.8
   geothermal:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 19.2
   hydro:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   hydro storage:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   nuclear:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   oil:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 150.0
+    - datetime: '2022-01-01'
       source: EIA.gov
       value: 0.0
   solar:
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 369.5
+    - datetime: '2022-02-01'
+      source: EIA.gov
+      value: 372.0
+    - datetime: '2022-04-01'
+      source: EIA.gov
+      value: 422.0
+    - datetime: '2022-05-01'
+      source: EIA.gov
+      value: 471.5
+    - datetime: '2022-11-01'
+      source: EIA.gov
+      value: 486.5
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 436.5
@@ -78,11 +123,23 @@ capacity:
       source: EIA.gov
       value: 2084.0
   unknown:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 1.1
   wind:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 1065.8
+    - datetime: '2021-02-01'
+      source: EIA.gov
+      value: 1230.8
+    - datetime: '2021-06-01'
+      source: EIA.gov
+      value: 1372.0
+    - datetime: '2021-12-01'
+      source: EIA.gov
+      value: 2424.0
+    - datetime: '2022-02-01'
       source: EIA.gov
       value: 2569.0
 comment: Public Service Company Of New Mexico
