--- a/config/zones/US-SW-SRP.yaml
+++ b/config/zones/US-SW-SRP.yaml
@@ -5,6 +5,12 @@ bounding_box:
     - 34.54817
 capacity:
   battery storage:
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 20.0
+    - datetime: '2021-09-01'
+      source: EIA.gov
+      value: 45.0
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 35.0
@@ -24,41 +30,62 @@ capacity:
       source: EIA.gov
       value: 1123.0
   biomass:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   coal:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 821.8
   gas:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 8157.6
+    - datetime: '2022-01-01'
+      source: EIA.gov
+      value: 7474.8
+    - datetime: '2022-08-01'
+      source: EIA.gov
+      value: 7573.8
+    - datetime: '2022-09-01'
       source: EIA.gov
       value: 7672.8
     - datetime: '2024-06-01'
       source: EIA.gov
       value: 7772.6
   geothermal:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   hydro:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 89.3
   hydro storage:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 154.1
   nuclear:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 4209.6
   oil:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 0.0
+    - datetime: '2022-01-01'
       source: EIA.gov
       value: 163.2
   solar:
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 359.8
+    - datetime: '2022-04-01'
+      source: EIA.gov
+      value: 459.8
+    - datetime: '2022-12-01'
+      source: EIA.gov
+      value: 559.8
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 562.9
@@ -72,11 +99,11 @@ capacity:
       source: EIA.gov
       value: 1674.9
   unknown:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   wind:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 63.0
     - datetime: '2024-07-01'
