--- a/config/zones/US-SW-TEPC.yaml
+++ b/config/zones/US-SW-TEPC.yaml
@@ -5,45 +5,60 @@ bounding_box:
     - 36.710648233
 capacity:
   battery storage:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 20.0
+    - datetime: '2021-04-01'
       source: EIA.gov
       value: 50.0
     - datetime: '2023-12-01'
       source: EIA.gov
       value: 70.0
   biomass:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   coal:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 1765.8
   gas:
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 1530.7
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 1530.2
   geothermal:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   hydro:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   hydro storage:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   nuclear:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   oil:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   solar:
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 328.9
+    - datetime: '2021-04-01'
+      source: EIA.gov
+      value: 458.9
+    - datetime: '2022-06-01'
+      source: EIA.gov
+      value: 474.0
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 475.0
@@ -51,11 +66,17 @@ capacity:
       source: EIA.gov
       value: 495.0
   unknown:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   wind:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 30.0
+    - datetime: '2021-05-01'
+      source: EIA.gov
+      value: 279.8
+    - datetime: '2021-12-01'
       source: EIA.gov
       value: 379.8
 comment: Tucson Electric Power Company
